# django-umsebenzi

./: README.md  requirements-tests.txt  requirements.in  requirements.txt  setup.cfg
.github/workflows/: umsebenzi.yml
docs/: project.md  task.md
tests/: factory.py  models.py  test_settings.py  tests.py  urls.py
umsebenzi/: admin.py  apps.py  enums.py  exceptions.py  filters.py  forms.py  latest.py  models.py  serializers.py  urls.py  views.py
umsebenzi/migrations/: 0001_initial.py  0002_alter_project_code.py  0002_task_issue_task_parent.py  0003_alter_task_due_date_alter_task_parent.py
