[metadata]
name = django-umsebenzi
version = 1.0.0
description = 'A set of django rest apis to manage your personal projects and tasks'
long_description = file: README.md
url = https://github.com/StandaloneDynamics/django-umsebenzi
author = Menzi Mthembu
license = GPL v3.0
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3.0
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    django >= 3.2
    djangorestframework >= 3.14
    django_enumfield >= 3.1
    django-filter >= 23.5

[options.packages.find]
exclude =
    tests*